# binlearn

./: .pylintrc  .readthedocs.yaml  EDGE_BASED_MIXIN_V2_SUMMARY.md  EQUAL_FREQUENCY_BINNING_SUMMARY.md  README.md  README.rst  REFACTORING_COMPLETED.md  REFACTORING_SUMMARY.md  TEST_FIXES_SUMMARY.md  UTILS_REORGANIZATION.md  VERSIONING_GUIDE.md  VERSION_DEMO.txt  WARNING_IMPROVEMENTS.md  analyze_utils_usage.py  base_renaming_summary.py  binlearn_refactored_architecture.py  codebase_analysis.py  comprehensive_equal_width_test.py  debug_chi2.py  debug_clone.py  debug_equal_width.py  debug_line_291.py  debug_manual_validation.py  debug_other_v2.py  debug_supervised.py  debug_supervised_task.py  debug_test.py  example_v2_with_mixins.py  examples_v2_migration.py  explain_representatives_flow.py  final_utils_check.py  final_v2_demo.py  function_level_utils_analysis.py  linting_report.py  method_testing.md  precise_utils_analysis.py  pyproject.toml  pytest.ini  quality_check.py  requirements.txt  (+61 more)
binlearn/: __init__.py  _polars_config.py  _version.py  config.py
binning/: __init__.py  _binning.py  _binnings_mixed.py  _guided_binning_base.py  _pandas_config.py  _polars_config.py  _utils.py  _version.py  config.py  errors.py  sklearn_utils.py
docs/: 00_introduction.rst  03_api.rst  DOCUMENTATION_UPDATES.md  Makefile  binning.rst  changelog.rst  conf.py  index.rst  modules.rst  requirements.txt
tests/: test_binning.py  test_binning_init.py  test_config.py  test_final_coverage.py  test_guided_binning_base.py  test_line_147_148_coverage.py  test_no_pandas.py  test_onehot_binning.py  test_remaining_coverage.py  test_uncovered_branches.py  test_utils_errors.py  (+1 more)
(+235 files in other folders)
